[package]
name = "am_bot"
version = "0.1.0"
authors = ["dexterfoxy <jadefoxboi@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.8"
ctrlc = "3.0"
chrono = "0.4"
parking_lot = "0.10"
lazy_static = "1.4"

[dependencies.rusqlite]
version = "0.21.0"
features = ["bundled"]